.opsera-hb2/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-hb2-dev
  labels:
    tenant: opsera
    app: hb2
    environment: dev
    managed-by: opsera-c2c
